--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -14,17 +14,17 @@ project("deviceinfo")
 # Gradle automatically packages shared libraries with your APK.
 
 add_library( # Sets the name of the library.
-             native-lib
+        native-lib
 
-             # Sets the library as a shared library.
-             SHARED
+        # Sets the library as a shared library.
+        SHARED
 
-             # Provides a relative path to your source file(s).
-             HandleException.cpp
-             HardwareInfo.cpp
-             SoftwareInfo.cpp
-             NetworkInfo.cpp
-             native-lib.cpp )
+        # Provides a relative path to your source file(s).
+        HandleException.cpp
+        hardware/HardwareInfo.cpp
+        software/SoftwareInfo.cpp
+        network/NetworkInfo.cpp
+        native-lib.cpp)
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
 # default, you only need to specify the name of the public NDK library
@@ -32,19 +32,19 @@ add_library( # Sets the name of the library.
 # completing its build.
 
 find_library( # Sets the name of the path variable.
-              log-lib
-              # Specifies the name of the NDK library that
-              # you want CMake to locate.
-              log )
+        log-lib
+        # Specifies the name of the NDK library that
+        # you want CMake to locate.
+        log)
 
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-                        native-lib
+        native-lib
 
-                       ${log-lib} )
+        ${log-lib})
 
 
 
