--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -24,6 +24,7 @@ add_library( # Sets the name of the library.
         hardware/HardwareInfo.cpp
         software/SoftwareInfo.cpp
         network/NetworkInfo.cpp
+        permission/CheckPermission.cpp
         native-lib.cpp)
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
